fixed some layout issues and added projects.

--- a/styles.css
+++ b/styles.css
@@ -145,10 +145,24 @@ p {
   bottom: 0;
   left: 0;
   background: rgba(117, 124, 144, 0.544);
+  transition: 0.7s ease;
 }
 
 .overlay:hover {
-  display: none;
+  background-color: transparent;
+}
+
+.overlay-text {
+  font-size: 25px;
+  color: white;
+  text-align: center;
+  padding-top: 30%;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay-text:hover {
+  color: transparent;
 }
 
 .project-title {
@@ -165,7 +179,6 @@ p {
   font-size: 12px;
   margin-right: 10px;
   font-family: "roboto";
-  box-shadow: 3px 3px #c88871;
 }
 
 a {
@@ -368,11 +381,12 @@ footer {
     padding: 40px 60px;
   }
 
+  .container,
   .featured-container {
+    width: 1100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    row-gap: 20px;
   }
 
   .project-container {
